# MidiAudioKontroller

./: AudioHandler.cpp  AudioHandler.h  ButtonHandler.cpp  ButtonHandler.h  CMakeLists.txt  MidiHandler.cpp  MidiHandler.h  Overlay.cpp  Overlay.h  WindowUtils.cpp  WindowUtils.h  install.sh  main.cpp
